# rockey

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  docker-compose.yml
python-agent/: Dockerfile  pyproject.toml
python-agent/src/: main.py
python-agent/src/agent/: graph.py  nlp_patterns.py
python-agent/src/agent/integrations/: slack_notifier.py
python-agent/src/agent/memory/: history_store.py  session_store.py
python-agent/src/agent/prompts/: system_prompt.py
python-agent/src/agent/rag/: fallback_policy.yaml  rag_fallback.py  rag_indexer.py  rag_query.py
python-agent/src/agent/states/: auto_action.py  complaint_flow.py  (+8 more)
python-agent/src/config/: circuit_breaker.py  logging_config.py  settings.py
python-agent/tests/contract/: test_check_order.py  test_classify_message.py  test_classify_reason.py  test_create_return_label.py  test_escalate_to_human.py  test_interpret_turn.py  test_slack_notifier.py  test_trigger_refund.py  test_verify_eligibility.py
python-agent/tests/integration/: test_admin_rag_sync.py  test_channel_edge_cases.py  test_channel_parity.py  test_complaint_edge_cases.py  test_complaint_escalation.py  test_complaint_repeat.py  test_confirmation.py  test_escalation.py  test_escalation_edge_cases.py  test_generate_decision_explanation.py  test_identification.py  test_identification_edge_cases.py  test_qualification.py  test_qualification_edge_cases.py  test_return_edge_cases.py  test_return_happy_path.py  test_session_resume.py  test_session_termination.py
python-agent/tests/unit/: test_logging_config.py  test_nlp_patterns.py
(+112 files in other folders)
