[project]
name = "rockey-python-agent"
version = "0.1.0"
description = "Rockey AI Agent (POC) - LangGraph + Claude Sonnet 4.6 + pgvector"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langgraph>=0.2",
    "anthropic>=0.34",
    "sentence-transformers>=3.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "redis>=5.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "mammoth>=1.8",
    "openpyxl>=3.1",
    "google-api-python-client>=2.140",
    "google-auth>=2.34",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "black>=24.8",
]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
